tests/ui/endpoint/invalid_attribute.stderr
error: Invalid attribute syntax
 --> tests/ui/endpoint/invalid_attribute.rs:8:12
  |
8 | #[read_all(FooResource)]
  |            ^^^^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/invalid_attribute.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read_all___gotham_restful_endpoint>`
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
